--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
   </head>
   <body>
     <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+      <a href="/" aria-current="page">Hjem</a>
+      <a href="/bestilling.html">Flybestilling</a>
+      <a href="artikler.html">Artikler</a>
     </nav>
     <main>
-      <h1>Home page</h1>
+      <h1>Minden Airways</h1>
+      <hr>
+      <h3>Vi flyr der ingen andre flyr</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A odit iste sunt provident consequuntur animi laboriosam eos nisi quisquam neque corporis omnis accusamus esse, minus dolorum consectetur maxime molestiae officiis?</p>
+      <hr>
+      <h3>Veldedige Formål</h3>
+      <label for="donation">Donasjonsmålet:</label>
+      <progress id="donation" value="56" max="100">56%</progress>
+      <div><p>Vi er <b>56%</b> av veien mot vårt mål for å gi til Atlas Alliansen</p></div>
     </main>
   </body>
 </html>
